Create a new sample/experiment in openBIS holding the external link of the newly created SEEK assay that was transferred.